--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>usb_relay_wsy</name>
+  <name>usb_relay_wsn</name>
   <version>0.0.0</version>
   <description>The usb_relay_wsn package</description>
   
