--- a/package.xml
+++ b/package.xml
@@ -1,56 +1,43 @@
 <?xml version="1.0"?>
-<package>
-    <name>usb_relay_wsn</name>
-    <version>0.0.0</version>
-    <description>The usb_relay_wsn package</description>
+<package format="2">
+  <name>usb_relay_node</name>
+  <version>0.0.0</version>
+  <description>The usb_relay_node package for usb relay 2's connection</description>
 
-    <!-- One maintainer tag required, multiple allowed, one person per tag -->
-    <!-- Example:  -->
-    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-    <maintainer email="developer@lights0123.com">Ben Schattinger</maintainer>
-
-    <!-- One license tag required, multiple allowed, one license per tag -->
-    <!-- Commonly used license strings: -->
-    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-    <license>BSD</license>
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
+  <!-- Example:  -->
+  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
+  <maintainer email="fixed-term.Kwanho.Kim@de.bosch.com">Kwanho Kim</maintainer>
 
 
-    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
-    <!-- Optional attribute type can be: website, bugtracker, or repository -->
-    <!-- Example: -->
-    <!-- <url type="website">http://ros.org/wiki/jacobian_publisher</url> -->
+  <!-- One license tag required, multiple allowed, one license per tag -->
+  <!-- Commonly used license strings: -->
+  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
+  <license>TODO</license>
 
 
-    <!-- Author tags are optional, mutiple are allowed, one per tag -->
-    <!-- Authors do not have to be maintianers, but could be -->
-    <!-- Example: -->
-    <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <!-- Url tags are optional, but multiple are allowed, one per tag -->
+  <!-- Optional attribute type can be: website, bugtracker, or repository -->
+  <!-- Example: -->
+  <!-- <url type="website">http://wiki.ros.org/warn_strategy_pkg</url> -->
 
 
-    <!-- The *_depend tags are used to specify dependencies -->
-    <!-- Dependencies can be catkin packages or system dependencies -->
-    <!-- Examples: -->
-    <!-- Use build_depend for packages you need at compile time: -->
-    <!--   <build_depend>message_generation</build_depend> -->
-    <!-- Use buildtool_depend for build tool packages: -->
-    <!--   <buildtool_depend>catkin</buildtool_depend> -->
-    <!-- Use run_depend for packages you need at runtime: -->
-    <!--   <run_depend>message_runtime</run_depend> -->
-    <!-- Use test_depend for packages you need only for testing: -->
-    <!--   <test_depend>gtest</test_depend> -->
-    <buildtool_depend>catkin</buildtool_depend>
-    <build_depend>rospy</build_depend>
-    <build_depend>std_msgs</build_depend>
-    <build_depend>message_generation</build_depend>
-    <run_depend>message_runtime</run_depend>
-    <run_depend>rospy</run_depend>
-    <run_depend>std_msgs</run_depend>
-    <!-- The export tag contains other, unspecified, tags -->
-    <export>
-        <!-- You can specify that this package is a metapackage here: -->
-        <!-- <metapackage/> -->
+  <!-- Author tags are optional, multiple are allowed, one per tag -->
+  <!-- Authors do not have to be maintainers, but could be -->
+  <!-- Example: -->
+  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
 
-        <!-- Other tools can request additional information be placed here -->
-    </export>
+
+  <!-- The *depend tags are used to specify dependencies -->
+  <!-- Dependencies can be catkin packages or system dependencies -->
+  <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>rospy</build_depend>
+  <build_export_depend>rospy</build_export_depend>
+  <exec_depend>rospy</exec_depend>
+
+
+  <!-- The export tag contains other, unspecified, tags -->
+  <export>
+    <!-- Other tools can request additional information be placed here -->\
+  </export>
 </package>
-    
